# wagtail_srcset

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Procfile  README.rst  commands.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: workflow.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: db.sqlite  settings.py  urls.py  views.py
example/templates/: index.html  manual.html  thumbnails.html
notebooks/: create_resized_images.ipynb  debug.ipynb  image_example.ipynb  tag_tests.ipynb  wagtail_as_syntax_for_srcset_image.ipynb
src/wagtail_srcset/: apps.py
src/wagtail_srcset/templatetags/: wagtail_srcset_tags.py
tests/: conftest.py  settings.py  test_models.py  test_templatetags.py  urls.py  utils.py
wagtail_srcset/: __init__.py  apps.py  runner.py  urls.py
wagtail_srcset/templatetags/: srcset.py  wagtail_srcset_tags.py
