[tool.poetry]
name = "wagtail-srcset"
version = "0.1.2"
description = ""
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>", "Johannes Spielmann <j@spielmannsolutions.com>"]
packages = [
    { include = "./commands.py" },
    { include = "wagtail_srcset", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx-rtd-theme = "^0.4.3"
coverage = "^5.0.3"
flake8 = "^3.7.9"
django_extensions = "^2.2.7"
pytest-django = "^3.8.0"
django-environ = "^0.4.5"
black = "^19.10b0"
typer = "^0.0.8"
jupyter = "^1.0.0"
ipdb = "^0.12.3"
tox = "^3.14.5"

[tool.poetry.scripts]
test = "commands:test"
lint = "commands:flake8"
autoformat = "commands:black"
show_coverage = "commands:coverage"
docs = "commands:docs"
notebook = "commands:notebook"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

