[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-srcset"
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-wagtailsrcset@wersdoerfer.de"},
    {name = "Johannes Spielmann", email = "j@spielmannsolutions.com"},
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
keywords = [
    "wagtail",
    "responsive",
    "images",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Topic :: Internet",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "wagtail >= 4",
]

[project.optional-dependencies]
test = [
    "pytest >= 6",
    "pytest-cov >= 3",
    "pytest-django",
]
doc = [
    "sphinx-rtd-theme",
]
dev = [
    "black",
    "flake8",
    "django-environ",
    "django_extensions",
    "isort",
    "jupyter",
    "jupyterlab",
    "jupyter-server < 2.0.0",
    "notebook",
    "pyzmq >= 25.1.1",
    "setuptools",
    "tox",
    "traitlets < 5.10.0",  # https://github.com/microsoft/azuredatastudio/issues/24436  - jupyterlab wont work
    "typer",
]

[project.urls]
Documentation = "https://wagtail-srcset.readthedocs.io/en/latest/"
Source = "https://github.com/ephes/wagtail_srcset"

[tool.flit.module]
name = "wagtail_srcset"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::DeprecationWarning",
]
